--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,150 @@
 /* Add CSS styling here */
+html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
+del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
+	vertical-align: baseline;
+	font-family: inherit;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	outline: 0;
+	padding: 0;
+	margin: 0;
+	}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+	}
+
+ol, ul {
+	list-style: none;
+	}
+/* tables still need cellspacing="0" in the markup */
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+	}
+caption, th, td {
+	font-weight: normal;
+	text-align: left;
+	}
+/* remove possible quote marks (") from <q> & <blockquote> */
+blockquote:before, blockquote:after, q:before, q:after {
+	content: "";
+	}
+blockquote, q {
+	quotes: "" "";
+	}
+    *{
+        box-sizing: border-box;
+        margin:0;
+        padding:0;
+        max-width:100%;
+        font-family:'Josefin Sans', sans-serif;
+    }
+    
+    html{
+        font-size: 62.5%;
+    }
+    body{
+        font-size:1.8rem;
+        color: #4f4f4f;
+        font-height:1.5;
+    }
+    h1{
+        font-size: 5rem;
+    }
+    h2{
+        font-size:3.5rem;
+    }
+    
+    section{
+        padding: 4% 4%;
+    }
+    header{
+        padding:3%;
+        background-color:black;
+        color:cornsilk;
+    }
+    .bar{
+        margin-top:5%;
+        margin-left: 2%;
+    }
+    nav a{
+        text-decoration:none;
+        color:white;
+        border: 1px solid white;
+        padding: 2%;
+        margin-top: 10%;
+        
+    }
+    nav a:hover{
+        background-color:white;
+        color:black;
+        transition: 1.5s;
+    }
+
+    #img1{
+        width:100%
+    }
+    #top{
+        display:flex;
+        justify-content: space-around;
+        align-items: flex-end;
+    }
+    .text1{
+        line-height: 1.5;
+        margin-left: 3%;
+    }
+
+    .firstRow{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        text-align:center;
+    }
+    
+    .firstRow img{
+        height: 150px;
+        width: 150px;
+    }
+
+    .secondRow{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        text-align:center;
+    }
+    
+    .secondRow img{
+        height: 150px;
+        width: 150px;
+    }
+    .image{
+        margin-left: 0%;
+    }
+
+    footer{
+        margin-top: 10%;
+        padding-bottom: 10%;
+        padding-top: 10%;
+        line-height: 2.5;
+        background-color: darkgray;
+        display:flex;
+        flex-direction:column;
+        align-items: center;
+        flex-wrap:wrap
+    }
+    button{
+        padding:2%;
+        border: 1px solid white;
+        color: white;
+        background-color:black;
+    }
+
+    .bottom{
+        text-align:center;
+        display:flex;
+    }
+    
